@@ -282,12 +282,12 @@ foreach($GLOBALS['tables'] as $i => $db)
 }
 
 // renaming file section
-$reports[2][0][(TYPE_HEADING).'-Funny File Names'] = 'List of files that have strange names';
+$reports[2][0][(TYPE_HEADING).'-Ascii File Names'] = 'List of files that have ascii characters in the filename.';
 
 if(isset($_REQUEST['show2']) && $_REQUEST['show2'] == true)
 {
 	// get some non-standard filenames, ones that contain non ascii characters
-	$results = $GLOBALS['database']->query(array('SELECT' => db_file::DATABASE, 'WHERE' => 'Filepath REGEXP(CONCAT(\'[^\',CHAR(32),\'-\',CHAR(126),\']\'))', 'LIMIT' => '0,15', 'ORDER' => 'Filepath'));
+	$results = $GLOBALS['database']->query(array('SELECT' => db_file::DATABASE, 'WHERE' => 'Filepath REGEXP(CONCAT(\'[^\',CHAR(32),\'-\',CHAR(126),\']\')) AND (LEFT(Filemime, 5) = "audio" OR LEFT(Filemime, 5) = "video" OR LEFT(Filemime, 5) = "image")', 'LIMIT' => '0,15', 'ORDER' => 'Filepath'));
 	
 	if(count($results) > 0)
 	{
@@ -314,10 +314,14 @@ if(isset($_REQUEST['show2']) && $_REQUEST['show2'] == true)
 	{
 		$reports[2][1][(TYPE_BOLD|TYPE_ENTIRE|TYPE_G).'-Non-Ascii Files'] = 'There are no non-standard character file names';
 	}
-	
-	// downloaded files commonly have _ underscores as spaces, find excessive underscores and recommend change
+}
+
+// downloaded files commonly have _ underscores as spaces, find excessive underscores and recommend change
+$reports[3][0][(TYPE_HEADING).'-Excessive Underscores and Periods'] = 'List of files that have underscores and periods in the filename.';
+
+if(isset($_REQUEST['show3']) && $_REQUEST['show3'] == true)
+{
 	// check request for replacements
-	
 	if(isset($_POST) && count($_POST) > 0 && isset($_POST['rename']))
 	{
 		$files = $GLOBALS['database']->query(array('SELECT' => db_file::DATABASE, 'WHERE' => 'id=' . join(' OR id=', array_keys($_POST['File']))));
@@ -327,29 +331,39 @@ if(isset($_REQUEST['show2']) && $_REQUEST['show2'] == true)
 			$files = db_ids::get(array('cat' => 'db_file'), $tmp_count, $tmp_error, $files);
 			
 			$directories = array();
+			$mv_files = array();
 			$win_commands = '';
 			$nix_commands = '';
+			
 			// do the renaming
 			foreach($files as $index => $file)
 			{
+				if(dirname($_POST['File'][$file['files_id']]) != dirname($file['Filepath']))
+					$different_dir = true;
+				else
+					$different_dir = false;
+					
 				// make sure all the folders leading up to it exists
-				$dirs = split('/', dirname($_POST['File'][$file['files_id']]));
-				$tmpdir = realpath('/');
-				foreach($dirs as $i => $dir)
+				if($different_dir)
 				{
-					if($dir != '')
+					$dirs = split('/', dirname($_POST['File'][$file['files_id']]));
+					$tmpdir = realpath('/');
+					foreach($dirs as $i => $dir)
 					{
-						$tmpdir = $tmpdir . $dir . '/';
-						if(!is_file($tmpdir) && !is_dir($tmpdir) && !in_array($tmpdir, $directories))
+						if($dir != '')
 						{
-							$directories[] = $tmpdir;
-							$result = @mkdir($tmpdir);
-							
-							if($result == false)
+							$tmpdir = $tmpdir . $dir . '/';
+							if(!is_file($tmpdir) && !is_dir($tmpdir) && !in_array($tmpdir, $directories))
 							{
-								$win_commands .= 'md "' . $tmpdir . '"<br />';
-								$nix_commands .= 'mkdir "' . $tmpdir . '"<br />';
-								break;
+								$directories[] = $tmpdir;
+								$result = @mkdir($tmpdir);
+								
+								if($result == false)
+								{
+									$win_commands .= 'md "' . $tmpdir . '"<br />';
+									$nix_commands .= 'mkdir "' . $tmpdir . '"<br />';
+									break;
+								}
 							}
 						}
 					}
@@ -359,36 +373,79 @@ if(isset($_REQUEST['show2']) && $_REQUEST['show2'] == true)
 				$result = @rename($file['Filename'], $_POST['File'][$file['files_id']]);
 				if($result == false)
 				{
-					$win_commands .= 'move "' . $file['Filename'] . '" "' . $_POST['File'][$file['files_id']] . '"<br />';
-					$nix_commands .= 'mv "' . $file['Filename'] . '" "' . $_POST['File'][$file['files_id']] . '"<br />';
+					$mv_files[] = $file['Filepath'];
+					$win_commands .= 'move "' . $file['Filepath'] . '" "' . $_POST['File'][$file['files_id']] . '"<br />';
+					$nix_commands .= 'mv "' . $file['Filepath'] . '" "' . $_POST['File'][$file['files_id']] . '"<br />';
 				}
 				else
 				{
 					// replace filename in each module
-					foreach($GLOBALS['modules'] as $i => $module)
+					foreach($GLOBALS['tables'] as $i => $table)
 					{
+						if(isset($file[$table . '_id']) && $file[$table . '_id'] != 0)
+						{
+							$result = $GLOBALS['database']->query(array('UPDATE' => $table, 'VALUES' => array('Filepath' => addslashes($_POST['File'][$file['files_id']])), 'WHERE' => 'id = ' . $file[$table . '_id']));
+						}
 					}
 				}
+				
+				// delete directory if it is empty
+				$rm_files = fs_file::get(array('dir' => dirname($file['Filepath']) . '/', 'limit' => 32000), $count, $error, true);
+				if($rm_files !== false && isset($_POST['remove_empty']) && $_POST['remove_empty'] == true)
+				{
+					if(count($rm_files) == 0)
+					{
+						$result = @rmdir(dirname($file['Filepath']));
+						if($result == false)
+						{
+							$win_commands .= 'rmdir "' . dirname($file['Filepath']) . '"<br />';
+							$nix_commands .= 'rmdir "' . dirname($file['Filepath']) . '"<br />';
+						}
+					}
+					// it's possible some command failed that would have been listed
+					//  in which case we should list the rmdir command
+					elseif($different_dir)
+					{
+						// check to see if all the files have been moved out of the directory
+						$rm_files_cmp = array();
+						foreach($rm_files as $j => $file)
+						{
+							$rm_files_cmp[] = $file['Filepath'];
+						}
+						
+						if(count(array_diff($mv_files, $rm_files_cmp)) == 0)
+						{
+							$win_commands .= 'rmdir "' . dirname($file['Filepath']) . '"<br />';
+							$nix_commands .= 'rmdir "' . dirname($file['Filepath']) . '"<br />';
+						}
+					}
+				}
+				else
+				{
+					print_r(dirname($file['Filepath']));
+					print '<br />';
+				}
 			}
-			
+		
+			// generate output
 			if($win_commands != '')
 			{
-				$reports[2][2.999][(TYPE_BOLD|TYPE_R).'-Permission Error'] = 'You must temporarily give the webserver write permission or run these commands:<table><tr><td>Windows</td><td>*Nix</td></tr><tr><td>' .
+				$reports[3][1.999][(TYPE_BOLD|TYPE_R).'-Permission Error'] = 'You must temporarily give the webserver write permission or run these commands:<table><tr><td>Windows</td><td>*Nix</td></tr><tr><td>' .
 					$win_commands . '</td><td>' . $nix_commands . '</td></tr></table>';
 			}
 		}
 	}
 	
 	// query some files
-	$results = $GLOBALS['database']->query(array('SELECT' => db_file::DATABASE, 'WHERE' => 'Filename REGEXP "(.*_.*_.*_.*|.*\\\..*\\\..*\\\..*)"', 'LIMIT' => '0,15', 'ORDER' => 'Filepath'));
+	$results = $GLOBALS['database']->query(array('SELECT' => db_file::DATABASE, 'WHERE' => 'Filename REGEXP "(.*_.*_.*_.*|.*\\\..*\\\..*\\\..*)" AND (LEFT(Filemime, 5) = "audio" OR LEFT(Filemime, 5) = "video" OR LEFT(Filemime, 5) = "image")', 'LIMIT' => '0,15', 'ORDER' => 'Filepath'));
 	
 	if(count($results) > 0)
 	{
-		$reports[2][2][(TYPE_BOLD).'-Excessive Periods and Underscores'] = 'These files could be better organized, consider revising:<form action="" method="post">';
+		$reports[3][1][(TYPE_BOLD).'-Excessive Periods and Underscores'] = 'These files could be better organized, consider revising:<form action="" method="post">';
 		
 		foreach($results as $i => $file)
 		{
-			$reports[2][2][(TYPE_BOLD).'-Excessive Periods and Underscores'] .= '<br />' . preg_replace('/(_|\.)/i', '<span style="color:rgb(255,0,0);font-weight:bold;">$1</span>', htmlspecialchars($file['Filepath']));
+			$reports[3][1][(TYPE_BOLD).'-Excessive Periods and Underscores'] .= '<br />' . preg_replace('/(_|\.)/i', '<span style="color:rgb(255,0,0);font-weight:bold;">$1</span>', htmlspecialchars($file['Filepath']));
 		
 			// figure out what the file should be named
 			//  remove extension
@@ -398,63 +455,68 @@ if(isset($_REQUEST['show2']) && $_REQUEST['show2'] == true)
 			//  first replace all the periods or underscores with spaces except for the last period of course
 			$file['Filepath'] = preg_replace('/[_\.]/', ' ', $file['Filepath']);
 			
+			//  move some key words that describe the rip into parens
+			$match_count = preg_match_all('/(hdtv|xvid|aaf|dsr)-?/i', $file['Filepath'], $matches);
+			
 			//  capitalize first letters
 			$file['Filepath'] = ucwords(dirname($file['Filepath'])) . '/' . ucwords(basename($file['Filepath']));
 			
-			//  move some key words that describe the rip into parens
-			$match_count = preg_match_all('/(hdtv|xvid)/i', $file['Filepath'], $matches);
-			
 			//  remove the distributers logo
-			$file['Filepath'] = preg_replace('/(-?lol|-?notv)/i', '', $file['Filepath']);
+			$file['Filepath'] = preg_replace('/(-lol|-notv|-0tv|-xor|-sys|-2hd)/i', '', $file['Filepath']);
 			
 			// replace season - episode if it is in the name
+			$file['Filepath'] = preg_replace('/ ?-? ?([0-9][0-9]?)x([0-9][0-9]?)-([0-9][0-9]?) ?-? ?/i', ' - Season \1 - Episode \2 & \3 - ', $file['Filepath']);
 			$file['Filepath'] = preg_replace('/ ?-? ?([0-9][0-9]?)x([0-9][0-9]?) ?-? ?/i', ' - Season \1 - Episode \2 - ', $file['Filepath']);
+			$file['Filepath'] = preg_replace('/ ?-? ?s([0-9][0-9]?)e([0-9][0-9]?)e([0-9][0-9]?) ?-? ?/i', ' - Season \1 - Episode \2 & \3 - ', $file['Filepath']);
 			$file['Filepath'] = preg_replace('/ ?-? ?s([0-9][0-9]?)e([0-9][0-9]?) ?-? ?/i', ' - Season \1 - Episode \2 - ', $file['Filepath']);
 			
 			// add information from folder if it organized properly
 			//  check for properly formatted season and episode
 			$result = preg_replace('/.*season ([0-9][0-9]?) - episode ([0-9][0-9]?).*/i', '/ ?-? ?(0?\1)(0?\2) ?-? ?/i', $file['Filepath']);
-			$file['Filepath'] = preg_replace($result, ' - Season \1 - Episode \2 - ', $file['Filepath']);
+			if($result != '' && $result != $file['Filepath'])
+				$file['Filepath'] = preg_replace($result, ' - Season \1 - Episode \2 - ', $file['Filepath']);
 			
 			//  get some tokens from the folder
 			//   skip over episode stuff we only want whats on the end
-			$tokens = tokenize(preg_replace('/.*season [0-9][0-9]? - episode [0-9][0-9]?(.*)/i', '\1', basename(dirname($file['Filepath']))));
+			$tokens = tokenize(preg_replace('/.*season [0-9][0-9]? - (episode [0-9][0-9]?)?(.*)/i', '\2', basename(dirname($file['Filepath']))));
 			$tokens_file = tokenize(basename($file['Filepath']));
 			$tokens_in_dir = array_diff($tokens['Unique'], $tokens_file['Unique']);
 			
 			//  replace some extra mess
+			$file['Filepath'] .= ' ' . ucwords(join(' ', $tokens_in_dir));
+						
+			if(isset($matches[1]) && count($matches[1]) > 0)
+			{
+				$file['Filepath'] = preg_replace('/(hdtv|xvid|aaf|dsr)-?/i', '', $file['Filepath']) . ' (' . join(' ', $matches[1]) . ')';
+			}
+			
 			//  remove double spaces
 			$file['Filepath'] = str_replace('  ', ' ', $file['Filepath']);
 			$file['Filepath'] = str_replace('  ', ' ', $file['Filepath']);
+			$file['Filepath'] = str_replace('  ', ' ', $file['Filepath']);
+			$file['Filepath'] = str_replace('  ', ' ', $file['Filepath']);
+			$file['Filepath'] = str_replace('  ', ' ', $file['Filepath']);
 			
-			$file['Filepath'] .= ucwords(join(' ', $tokens_in_dir));
-			
-			if(isset($matches[1]) && count($matches[1]) > 0)
-			{
-				$file['Filepath'] = preg_replace('/(hdtv|xvid)/i', '', $file['Filepath']) . ' (' . join(' ', $matches[1]) . ')';
-			}
-			
-			$reports[2][2][(TYPE_BOLD).'-Excessive Periods and Underscores'] .= ' -> <input type="text" size="150" name="File[' . $file['id'] . ']" value="' . $file['Filepath'] . '.' . $ext . '" />';
+			$reports[3][1][(TYPE_BOLD).'-Excessive Periods and Underscores'] .= ' -> <input type="text" size="150" name="File[' . $file['id'] . ']" value="' . $file['Filepath'] . '.' . $ext . '" />';
 		}
 		
-		$reports[2][2][(TYPE_BOLD).'-Excessive Periods and Underscores'] .= '<br /><input type="submit" name="rename" value="Rename!" /><input type="checkbox" name="remove_empty" value="true!" />Remove empty directories.</form>';
+		$reports[3][1][(TYPE_BOLD).'-Excessive Periods and Underscores'] .= '<br /><input type="submit" name="rename" value="Rename!" /><input type="checkbox" name="remove_empty" value="true" />Remove empty directories.</form>';
 		
 		// get total
 		$count = $GLOBALS['database']->query(array('SELECT' => db_file::DATABASE, 'COLUMNS' => 'count(*)', 'WHERE' => 'Filename REGEXP "(.*_.*_.*_.*|.*\\\..*\\\..*\\\..*)"'));
 		
 		if(count($count) > 0)
 		{
-			$reports[2][2.1][(TYPE_BOLD|TYPE_R).'-Excessive Periods and Underscores Count'] = '<br />There is a total of ' . $count[0]['count(*)'] . ' file(s) with excessive underscores and periods characters';
+			$reports[3][1.1][(TYPE_BOLD|TYPE_R).'-Excessive Periods and Underscores Count'] = '<br />There is a total of ' . $count[0]['count(*)'] . ' file(s) with excessive underscores and periods characters';
 		}
 		else
 		{
-			$reports[2][2.1][(TYPE_BOLD|TYPE_ENTIRE|TYPE_R).'-Excessive Periods and Underscores Count'] = '<br />There was an error getting the total count.';
+			$reports[3][1.1][(TYPE_BOLD|TYPE_ENTIRE|TYPE_R).'-Excessive Periods and Underscores Count'] = '<br />There was an error getting the total count.';
 		}
 	}
+}
 	
 	// organize files with common parts in the name
-	
-}
 
 ksort($reports, SORT_NUMERIC);
 foreach($reports as $section => $report)
